@@ -1,3 +1,9 @@
+2008-02-27  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	* src/sound-juicer.h:
+	Don't create custom stock items when we can use the system ones.
+
 2008-02-26  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-main.c:
